--- a/students.html
+++ b/students.html
@@ -8,7 +8,7 @@
     <title>students</title>
 </head>
 <body>
-<div id="master-wrapper">
+<div class="master-wrapper">
 
 <div id="mainPop" class="pop">
   <p style="font-size:22px">Enter your child's last name or PIN below and click the search button to view their class progress</p>
