--- a/students.html
+++ b/students.html
@@ -320,7 +320,7 @@
 
 <div id="alertPop" class="pop">
   <p id="alertTitle">I</p>
-  <p id="alertMssg" style="font-size:25px"><span class="do">Reminder:</span><br>Next Sunday, September 4, is a "Family Worship Sunday", which means Kidstuff and Treehouse will not meet.  We look forward to seeing you all back in the Kidstuff hallways on September 11!</p>
+  <p id="alertMssg" style="font-size:25px;text-align:left;"><span class="do">Reminder: </span>Next week (September 4) is a "Family Worship Sunday", meaning that K5-6th grade kids will remain with their families during the worship service; Kidstuff and Treehouse will not meet. We'll see you all back in the Kidstuff hallways on September 11!</p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
 </div>
 
