--- a/students.html
+++ b/students.html
@@ -16,7 +16,7 @@
     <input id="searchField" type="text" placeholder="enter last name or PIN" oninput="pinAutoEnter()" onkeydown="if(event.keyCode==13)document.getElementById('submitButton').click()"/>
     <div id="submitButton" class="ptr" onclick="findStudent()">S</div>
   </div>
-  <p style="color:#FFE599">Database last updated: 8/28/2022 7:14PM</p>
+  <p style="color:#FFE599">Database last updated: 8/29/2022 12:26PM</p>
   <p style="color:#ddd;border-top:1px solid #555;padding-top:20px">Your child's 3-digit PIN can be found under the RESOURCES tab on their info page that loads after you search for them by name</p>
   <a target="_blank" href="https://youtu.be/gLHxIObwm0I"><div class="watchContainer" style="margin-top:40px">
     <div class="fillerDiv"></div>
@@ -320,7 +320,7 @@
 
 <div id="alertPop" class="pop">
   <p id="alertTitle">I</p>
-  <p id="alertMssg" style="font-size:25px;text-align:left;"><span class="do">Reminder: </span>Next week (September 4) is a "Family Worship Sunday", meaning that K5-6th grade kids will remain with their families during the worship service; Kidstuff and Treehouse will not meet. We'll see you all back in the Kidstuff hallways on September 11!</p>
+  <p id="alertMssg" style="font-size:25px;text-align:left;"><span class="do">Reminder: </span>Next Sunday (September 4) is a "Family Worship Sunday", meaning that K5-6th grade kids will remain with their families during the worship service; Kidstuff and Treehouse will not meet. We'll see you all back in the Kidstuff hallways on September 11!</p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
 </div>
 
