--- a/students.html
+++ b/students.html
@@ -319,8 +319,8 @@
 </div>
 
 <div id="alertPop" class="pop">
-  <p id="alertTitle">I</p>
-  <p id="alertMssg" style="font-size:25px;text-align:left;"><span class="do">Reminder: </span>Next Sunday (September 4) is a "Family Worship Sunday", meaning that K5-6th grade kids will remain with their families during the worship service; Kidstuff and Treehouse will not meet. We'll see you all back in the Kidstuff hallways on September 11!</p>
+  <p class="do" style="font-size:30px;font-weight:bold;margin-bottom:0px;">Reminder:</p>
+  <p id="alertMssg" style="font-size:25px;text-align:justify;margin-top:10px">Next Sunday (September 4) is a "Family Worship Sunday", meaning that K5-6th grade kids will remain with their families during the worship service; Kidstuff and Treehouse will not meet. We'll see you all back in the Kidstuff hallways on September 11!</p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
 </div>
 
