--- a/class/index.html
+++ b/class/index.html
@@ -21,6 +21,7 @@
     </div>
     <input id="searchMain" class="searchField" type="text" placeholder="search names" oninput="searchNamesMain()"/>
     <div id="nameList"></div>
+    <p id="disableAttp" class="ptr" style="width:388px;height:100px" onclick="disableAtt()"></p>
 </div>
 
 <div id="att2Pop" class="pop">
@@ -245,7 +246,7 @@
 
 <div id="logPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['logPop'],['mainPop'])">f</div>
+    <div class="backButton ptr" onclick="goHome()">f</div>
   </div>
   <input id="searchLog" class="searchField" type="text" placeholder="search log" oninput="searchLog()"/>
   <div id="log" class="ptr" onclick="selectText('log')"></div>
@@ -412,7 +413,6 @@
 
 <div id="editStudentPop" class="pop" style="padding-top:0px">
   <div>
-    <div id="dispStudentPhoto" class="dispStudentPhoto ptr" style="margin-bottom:20px" onclick="photoLinks()"></div>
     <div class="genderAndBdContainer">
       <div>
         <p style="margin-top:0px">First Name</p>
@@ -464,6 +464,7 @@
       <div class="roundButton1 deleteButton ptr" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
       <div class="roundButton1 okButton ptr" id="editStudentOkButton" onclick="editStudent()">V</div>
     </div>
+    <div id="dispStudentPhoto" class="dispStudentPhoto ptr" style="margin-bottom:20px" onclick="photoLinks()"></div>
     <div id="dispParentsPhoto" class="dispStudentPhoto ptr" style="margin-bottom:20px" onclick="parentsPhotoLinks()"></div>
   </div>
 </div>
