--- a/students.html
+++ b/students.html
@@ -138,7 +138,7 @@
 <div id="missionsPop" class="pop">
   <p id="currentMissionsLink" class="ptr" onclick="currentMissionsLink()">Download this week's missions</p>
   <p class="note">Click on any past mission below for details</p>
-  <div id="asmvHeaderContainer">
+  <div id="asmvHeaderContainer" style="position:sticky;top:322px;background-color:#111;">
     <div class="asmvHeader">ACTIVITY SHEETS</div>
     <div class="asmvHeader">MEMORY VERSES</div>
   </div>
@@ -229,7 +229,7 @@
   <p id="rankChartPopText" class="popText"></p>
   <div id="rankChartContainer">
   <table id="rankChartTable">
-    <tr class="tableHeaderRow">
+    <tr class="tableHeaderRow" style="position:sticky;top:322px">
       <td>Insignia</td>
       <td>Rank</td>
       <td>Abbr.</td>
@@ -288,7 +288,7 @@
   <p id="calendarPopText" style="margin-top:0px"></p>
   <div id="calendarContainer">
   <table id="calendarTable">
-    <tr class="tableHeaderRow">
+    <tr class="tableHeaderRow" style="position:sticky;top:322px">
     <td>Date</td>
     <td>Lesson</td>
     <td>Memory</td>
@@ -320,7 +320,7 @@
 
 <div id="alertPop" class="pop">
   <p class="do" style="font-size:30px;font-weight:bold;margin-bottom:0px;">Reminder:</p>
-  <p id="alertMssg" style="font-size:25px;text-align:justify;margin-top:10px">Next Sunday (September 4) is a "Family Worship Sunday", meaning that K5-6th grade kids will remain with their families during the worship service; Kidstuff and Treehouse will not meet. We'll see you all back in the Kidstuff hallways on September 11!</p>
+  <p id="alertMssg" style="font-size:25px;text-align:justify;margin-top:10px">Today (September 4) is a "Family Worship Sunday", meaning that K5-6th grade kids will remain with their families during the worship service; Kidstuff and Treehouse will not meet. We'll see you all back in the Kidstuff hallways on September 11!</p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
 </div>
 
