--- a/students.html
+++ b/students.html
@@ -146,7 +146,7 @@
 <div id="missionsPop" class="pop">
   <p id="currentMissionsLink" class="ptr" onclick="currentMissionsLink()">Download this week's missions</p>
   <p class="note">Click on any past mission below for details</p>
-  <div id="asmvHeaderContainer" style="position:sticky;top:322px;background-color:#111;">
+  <div id="asmvHeaderContainer" style="position:sticky;top:348px;background-color:#111;">
     <div class="asmvHeader">ACTIVITY SHEETS</div>
     <div class="asmvHeader">MEMORY VERSES</div>
   </div>
@@ -171,6 +171,10 @@
       <tr>
         <td class="tableSider">Date Assigned</td>
         <td id="asDateAssigned"></td>
+      </tr>
+      <tr>
+        <td class="tableSider">Date Due</td>
+        <td id="asDateDue"></td>
       </tr>
       <tr>
         <td class="tableSider">Date Turned In</td>
@@ -209,6 +213,10 @@
         <td id="mvDateAssigned"></td>
       </tr>
       <tr>
+        <td class="tableSider">Date Due</td>
+        <td id="mvDateDue"></td>
+      </tr>
+      <tr>
         <td class="tableSider">Date Recited</td>
         <td id="mvDateRecited"></td>
       </tr>
@@ -237,7 +245,7 @@
   <p id="rankChartPopText" class="popText"></p>
   <div id="rankChartContainer">
   <table id="rankChartTable">
-    <tr class="tableHeaderRow" style="position:sticky;top:322px">
+    <tr class="tableHeaderRow" style="position:sticky;top:348px">
       <td>Insignia</td>
       <td>Rank</td>
       <td>Abbr.</td>
@@ -296,7 +304,7 @@
   <p id="calendarPopText" style="margin-top:0px"></p>
   <div id="calendarContainer">
   <table id="calendarTable">
-    <tr class="tableHeaderRow" style="position:sticky;top:322px">
+    <tr class="tableHeaderRow" style="position:sticky;top:348px">
     <td>Date</td>
     <td>Lesson</td>
     <td>Memory</td>
