--- a/class/index.html
+++ b/class/index.html
@@ -866,7 +866,7 @@
   </div>
   <div id="calendarContainer">
   <table id="calendarTable">
-    <tr class="tableHeaderRow" style="position:sticky;top:73px">
+    <tr class="tableHeaderRow" style="position:sticky;top:73px;">
     <td>ti</td>
     <td>ew</td>
     <td>dn</td>
