--- a/students.html
+++ b/students.html
@@ -71,7 +71,7 @@
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="pop(['passThruAlertPop'],_currentPops)"><span>f</span></div>
   </div>
-    <p id="passThruAlertMssg" style="text-align:justify;margin-top:40px;"></p>
+    <p id="passThruAlertMssg" style="text-align:left;margin-top:40px;"></p>
     <div class="okButton ptr" style="margin-top:50px" onclick="_currentFunction()">OK</div>
 </div>
 
@@ -336,7 +336,7 @@
 
 <div id="alertPop" class="pop">
   <p class="do" style="font-size:30px;font-weight:bold;margin-bottom:0px;">Reminder:</p>
-  <p id="alertMssg" style="font-size:25px;text-align:justify;margin-top:40px;line-height:1.5;"></p>
+  <p id="alertMssg" style="font-size:25px;text-align:left;margin-top:15px;line-height:1.5;"></p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
 </div>
 
