--- a/class/index.html
+++ b/class/index.html
@@ -745,7 +745,7 @@
       <td>Rank</td>
       <td>Abbr.</td>
       <td>Points</td>
-      <td>Promoted</td>
+      <td>Date</td>
     </tr>
   </table>
   </div>
