--- a/students.html
+++ b/students.html
@@ -18,6 +18,7 @@
   </div>
   <p style="color:#FFE599">Last updated: September 18 8:38PM</p>
   <p style="color:#ddd;border-top:1px solid #555;padding-top:20px">Your child's 3-digit PIN can be found under the RESOURCES tab on their info page that loads after you search for them by name</p>
+  <p class="currentMissionsLink ptr" onclick="currentMissionsLink()" style="width:325px;color:white;font-size:20px;margin-top:40px;border:1px solid #094fd3;padding:10px;background-color:#4676EE;text-decoration:none;border-radius:10px;">Download this week's missions</p>
   <a target="_blank" href="https://youtu.be/gLHxIObwm0I"><div class="watchContainer" style="margin-top:40px">
     <div class="fillerDiv"></div>
     <div class="watchIcon"></div>
@@ -144,7 +145,7 @@
 </div>
 
 <div id="missionsPop" class="pop">
-  <p id="currentMissionsLink" class="ptr" onclick="currentMissionsLink()">Download this week's missions</p>
+  <p class="currentMissionsLink ptr" onclick="currentMissionsLink()">Download this week's missions</p>
   <p class="note">Click on any past mission below for details</p>
   <div id="asmvHeaderContainer" style="position:sticky;top:348px;background-color:#111;">
     <div class="asmvHeader">ACTIVITY SHEETS</div>
