--- a/class/index.html
+++ b/class/index.html
@@ -14,14 +14,14 @@
     <div id="topMenuContainer">
         <div id="mainMenuButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['mainMenuPop'])">H</div>
         <div id="alertButton" class="roundButton2 ptr" onclick="alertsPop()">#</div>
-        <div id="allergiesButton" class="roundButton2 ptr" style="padding-top:6px" onclick="allergiesPop()">A</div>
+        <div id="lockButton" class="roundButton2 ptr" onclick="disableAtt()">J</div>
+        <!-- <div id="allergiesButton" class="roundButton2 ptr" style="padding-top:6px" onclick="allergiesPop()">A</div> -->
         <div id="attCountButton" class="roundButton2 ptr" onclick="loadAttendees()">0</div>
         <div id="logButton" class="roundButton2 ptr" onclick="logPop()">F</div>
         <div id="backupButton" class="roundButton2 ptr" onclick="populateBackup()">B</div>
     </div>
     <input id="searchMain" class="searchField" type="text" placeholder="search names" oninput="searchNamesMain()"/>
     <div id="nameList"></div>
-    <p id="disableAttp" class="ptr" style="width:388px;height:100px" onclick="disableAtt()"></p>
 </div>
 
 <div id="att2Pop" class="pop">
