--- a/students.html
+++ b/students.html
@@ -19,6 +19,10 @@
   <p style="color:#FFE599">Last updated: September 25 7:50PM</p>
   <p style="color:#ddd;border-top:1px solid #555;padding-top:20px">Your child's 3-digit PIN can be found under the RESOURCES tab on their info page that loads after you search for them by name</p>
   <p class="currentMissionsLink ptr" onclick="currentMissionsLink()" style="width:325px;color:white;font-size:20px;margin:40px auto 20px auto;border:1px solid #094fd3;padding:10px;background-color:#4676EE;text-decoration:none;border-radius:10px;">Download this week's missions</p>
+  <div class="socialMediaFlexDiv" style="margin-top:20px">
+    <a target="_blank" href="https://www.facebook.com/groups/ksgrade2"><div class="fbLink ptr"></div></a>
+    <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy"><div class="ytLink ptr"></div></a>
+  </div>
   <a target="_blank" href="https://youtu.be/gLHxIObwm0I"><div class="watchContainer" style="margin-top:40px">
     <div class="fillerDiv"></div>
     <div class="watchIcon"></div>
@@ -322,9 +326,9 @@
   <p><a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy">View lesson and memory verse videos</a></p>
   <p><a href="sms:18643023502?&body=JOIN">Text "JOIN" to 864-302-3502</a><br>to receive weekly update links by text</p>
   <p><a href="mailto:jonathan@ksgrade2.com?subject=JOIN&body=JOIN">Email "JOIN" to jonathan@ksgrade2.com</a><br>to receive weekly updates by email</p>
-  <div id="socialMediaFlexDiv" style="margin-top:20px">
-    <a target="_blank" href="https://www.facebook.com/groups/ksgrade2"><div id="fbLink" class="ptr"></div></a>
-    <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy"><div id="ytLink" class="ptr"></div></a>
+  <div class="socialMediaFlexDiv" style="margin-top:20px">
+    <a target="_blank" href="https://www.facebook.com/groups/ksgrade2"><div class="fbLink ptr"></div></a>
+    <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy"><div class="ytLink ptr"></div></a>
   </div>
   <p style="text-align:center;margin-top:20px;border-top:1px solid #555;padding-top:20px;color:white"><a target="_blank" href="docs/mr-mulkey-contact-info.vcf">Add Mr. Mulkey's contact info to your contacts</a> or use the buttons to call, text, or email</p>
   <div class="navigationButtonContainer" style="margin-top:10px;">
